force retry api
