# docs/swagger.yaml
@@ -45,6 +45,28 @@ info:
   title: spacescope data extraction notify backend
   version: "1.0"
 paths:
+  /api/v1/force_retry:
+    post:
+      consumes:
+      - application/json
+      - application/json
+      description: replay the failed tipsets, ignore retry times limit.
+      produces:
+      - application/json
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/utils.ResponseWithRequestId'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/utils.ResponseWithRequestId'
+      tags:
+      - DATA-EXTRACTION-API-Internal-V1-CallByManual
   /api/v1/gapfill:
     post:
       consumes:
